# Proyectos-embebidos

./: NodoUno  datos.csv  datos_legibles_20260411_233245.txt  main.c
NodoDos/: CMakeLists.txt  app_data.h  i2c_bus.c  i2c_bus.h  main.c  motion_detector.c  motion_detector.h  mpu6050.c  mpu6050.h
NodoUno/: CMakeLists.txt  guardar_datos.py  idf_component.yml  main.rar
NodoUno/i2c_bus/: i2c_bus.h
NodoUno/main/: CMakeLists.txt  Pantalla.h  app_data.h  common_packet.h  main.c  pantalla.c
NodoUno/main/Pulse/: pulse_sensor.c  pulse_sensor.h
NodoUno/main/display/: display.c  display.h
NodoUno/main/i2c_bus/: i2c_bus.c
NodoUno/main/imu/: qmi8658.c  qmi8658.h
NodoUno/main/rtc/: ds3231.c  ds3231.h
NodoUno/main/touch/: touch.c  touch.h
NodoUno/max30100_display/: CMakeLists.txt
NodoUno/max30100_display/main/: CMakeLists.txt
doxygen_html_nodos/: README_generar_html.txt  mainpage.md  nodo1_doxygen_blocks.txt  nodo2_doxygen_blocks.txt
doxygen_html_nodos/html/: arquitectura.html  doxyfile.txt  index.html  nodo1.html  nodo2.html
